--- a/views/admin/attendence-list.ejs
+++ b/views/admin/attendence-list.ejs
@@ -437,6 +437,7 @@
                                                                                                     class="d-flex m-0 p-0 justify-content-center align-items-center text-white">
                                                                                                     Rejected</h3>
                                                                                             </div>
+
                                                                                             <% } %>
                                                                     </div>
 
@@ -486,6 +487,7 @@
                                                                             <% } %>
 
                                                                     </div>
+
                                                                 </div>
                                                             </div>
 
@@ -621,10 +623,10 @@
 
                 const interval1 = setInterval(() => {
                     document.getElementById('DaySeconds').innerHTML = --seconds;
-                    if (seconds == 0) {
+                    if (seconds <= 0) {
                         seconds = 59;
                         document.getElementById('DayMinutes').innerHTML = --minutes;
-                        if (minutes == 0) {
+                        if (minutes <= 0) {
                             document.getElementById('DayHours').innerHTML = --hours;
                             minutes = 59;
                         }
