--- a/views/admin/show-pass-requests.ejs
+++ b/views/admin/show-pass-requests.ejs
@@ -85,10 +85,10 @@
                 <div class="row scrumboard" id="cancel-row">
                     <div class="col-lg-12 layout-spacing">
 
-                        <h1>New Pass Requests</h1>
-                        <div class="task-list-section flex-wrap" id="newRequests">
+                        <% if (allPassRequests.length){ %>
+                            <h1>New Pass Requests</h1>
+                            <div class="task-list-section flex-wrap" id="newRequests">
 
-                            <% if (allPassRequests.length){ %>
 
                                 <% for (passRequest of allPassRequests){ %>
 
@@ -253,14 +253,15 @@
                                                                             data-target="#exampleModal">Decline</button>
 
                                                                     </div>
-                                                                    <div data-pass-id="<%=passRequest._id  %>"
-                                                                        class="tb-section-2 d-flex align-items-center justify-content-end deleteBtn">
-                                                                        <svg xmlns="http://www.w3.org/2000/svg"
+                                                                    <div
+                                                                        class="tb-section-2 d-flex align-items-center justify-content-end">
+                                                                        <svg data-pass-id="<%=passRequest._id  %>"
+                                                                            xmlns="http://www.w3.org/2000/svg"
                                                                             width="24" height="24" viewBox="0 0 24 24"
                                                                             fill="none" stroke="currentColor"
                                                                             stroke-width="2" stroke-linecap="round"
                                                                             stroke-linejoin="round"
-                                                                            class="feather feather-trash-2 s-task-delete list-delete"
+                                                                            class="feather feather-trash-2 s-task-delete list-delete deleteBtn"
                                                                             href="javascript:void(0);">
                                                                             <polyline points="3 6 5 6 21 6"></polyline>
                                                                             <path
@@ -295,10 +296,10 @@
                                         </div>
                                         <% } %>
                                             <% } %>
-                                                <% }else{ %>
-                                                    <h1>No new pass requests...</h1>
-                                                    <% } %>
-                        </div>
+                            </div>
+                            <% }else{ %>
+                                <h1>No new pass requests...</h1>
+                                <% } %>
                     </div>
                 </div>
 
@@ -346,7 +347,7 @@
 
     <!-- Delete Pass Request -->
     <script>
-        for (deleteBtn of document.querySelectorAll('.deleteBtn')) {
+        for (let deleteBtn of document.querySelectorAll('.deleteBtn')) {
             deleteBtn.addEventListener('click', function (evt) {
                 document.querySelector('.delete-confirm').addEventListener('click', async function (evt) {
                     evt.stopPropagation();
@@ -354,6 +355,7 @@
                     const res = await fetch('/dormitory/admin/pass-request/' + deleteBtn.getAttribute('data-pass-id') + '/delete', {
                         method: 'post'
                     })
+                    console.log(await res.json());
                 })
             })
         }
