--- a/views/complaint/complaint-log.ejs
+++ b/views/complaint/complaint-log.ejs
@@ -63,7 +63,7 @@
                                             data-connect="sorting">
                                             <div class="connect-sorting">
 
-                                                <div class="connect-sorting-content ui-sortable" data-sortable="true">
+                                                <div class="connect-sorting-content ui-sortable">
 
                                                     <div data-draggable="true" class="card img-task ui-sortable-handle"
                                                         style="">
