--- a/views/student/pass-request-status.ejs
+++ b/views/student/pass-request-status.ejs
@@ -37,9 +37,8 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <p class="">If you delete this pass request, the student will recieve a message saying
-                                    his/her pass request was IGNORED. <br> <br> Are you sure you want to
-                                    proceed?</p>
+                                <p class="">If you proceed to delete, then this pass request will be COMPLETELY deleted
+                                    from the system.</p>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn" data-dismiss="modal">Cancel</button>
@@ -85,15 +84,9 @@
                 <div class="row scrumboard" id="cancel-row">
                     <div class="col-lg-12 layout-spacing">
 
-                        <% if (passRequest){ %>
+                        <% if (passRequest.dayPassRequest || passRequest.nightPassRequest){ %>
+                            <h1>Pass Requests Status</h1>
                             <div class="task-list-section flex-wrap">
-
-
-
-
-
-
-
                                 <% if (passRequest.nightPassRequest){ %>
                                     <div data-section="s-new" class=" mb-4 mr-2" data-connect="">
                                         <div class="connect-sorting">
@@ -170,7 +163,8 @@
                                                                         <%= hostellite.fullName %>
                                                                     </h6>
                                                                     <p class="d-flex align-items-center">
-                                                                        Hostel <%= hostellite.hostelInfo.hostelNo %> ,
+                                                                        Hostel <%= hostellite.hostelInfo.hostelNo %>
+                                                                            ,
                                                                             Room
                                                                             #
                                                                             <%= hostellite.hostelInfo.roomNo %>
@@ -187,9 +181,12 @@
                                                                             <rect x="3" y="4" width="18" height="18"
                                                                                 rx="2" ry="2">
                                                                             </rect>
-                                                                            <line x1="16" y1="2" x2="16" y2="6"></line>
-                                                                            <line x1="8" y1="2" x2="8" y2="6"></line>
-                                                                            <line x1="3" y1="10" x2="21" y2="10"></line>
+                                                                            <line x1="16" y1="2" x2="16" y2="6">
+                                                                            </line>
+                                                                            <line x1="8" y1="2" x2="8" y2="6">
+                                                                            </line>
+                                                                            <line x1="3" y1="10" x2="21" y2="10">
+                                                                            </line>
                                                                         </svg>
                                                                         <%= passRequest.nightPassRequest.passTime.getDate()
                                                                             %>/<%=
@@ -359,37 +356,45 @@
 
                                                                                     <% } %>
 
-                                                                                        <div
-                                                                                            class="tb-section-2 d-flex align-items-center ml-auto">
-                                                                                            <svg xmlns="http://www.w3.org/2000/svg"
-                                                                                                data-pass-id="<%= passRequest.nightPassRequest._id  %>"
-                                                                                                width="24" height="24"
-                                                                                                viewBox="0 0 24 24"
-                                                                                                fill="none"
-                                                                                                stroke="currentColor"
-                                                                                                stroke-width="2"
-                                                                                                stroke-linecap="round"
-                                                                                                stroke-linejoin="round"
-                                                                                                class="feather
+                                                                                        <% if
+                                                                                            (!passRequest.nightPassRequest.granted){
+                                                                                            %>
+                                                                                            <div
+                                                                                                class="tb-section-2 d-flex align-items-center ml-auto">
+                                                                                                <svg xmlns="http://www.w3.org/2000/svg"
+                                                                                                    data-pass-id="<%= passRequest.nightPassRequest._id  %>"
+                                                                                                    width="24"
+                                                                                                    height="24"
+                                                                                                    viewBox="0 0 24 24"
+                                                                                                    fill="none"
+                                                                                                    stroke="currentColor"
+                                                                                                    stroke-width="2"
+                                                                                                    stroke-linecap="round"
+                                                                                                    stroke-linejoin="round"
+                                                                                                    class="feather
                                                                                                 feather-trash-2
                                                                                                 s-task-delete
                                                                                                 list-delete deleteBtn"
-                                                                                                href="javascript:void(0);">
-                                                                                                <polyline
-                                                                                                    points="3 6 5 6 21 6">
-                                                                                                </polyline>
-                                                                                                <path
-                                                                                                    d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2">
-                                                                                                </path>
-                                                                                                <line x1="10" y1="11"
-                                                                                                    x2="10" y2="17">
-                                                                                                </line>
-                                                                                                <line x1="14" y1="11"
-                                                                                                    x2="14" y2="17">
-                                                                                                </line>
-                                                                                            </svg>
+                                                                                                    href="javascript:void(0);">
+                                                                                                    <polyline
+                                                                                                        points="3 6 5 6 21 6">
+                                                                                                    </polyline>
+                                                                                                    <path
+                                                                                                        d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2">
+                                                                                                    </path>
+                                                                                                    <line x1="10"
+                                                                                                        y1="11" x2="10"
+                                                                                                        y2="17">
+                                                                                                    </line>
+                                                                                                    <line x1="14"
+                                                                                                        y1="11" x2="14"
+                                                                                                        y2="17">
+                                                                                                    </line>
+                                                                                                </svg>
 
-                                                                                        </div>
+                                                                                            </div>
+
+                                                                                            <% } %>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -459,7 +464,8 @@
                                                                                         stroke="#000000"
                                                                                         stroke-width="2.5"
                                                                                         stroke-linecap="round"
-                                                                                        stroke-linejoin="round"></path>
+                                                                                        stroke-linejoin="round">
+                                                                                    </path>
                                                                                 </g>
                                                                             </svg>Not Seen
                                                                         </div>
@@ -667,8 +673,8 @@
                                                                                             Declined
                                                                                         </div>
                                                                                     </div>
-                                                                                    <p class="mt-3">Decline Reason: <%=
-                                                                                            (passRequest.dayPassRequest.declineReason
+                                                                                    <p class="mt-3">Decline Reason:
+                                                                                        <%= (passRequest.dayPassRequest.declineReason
                                                                                             ?
                                                                                             passRequest.dayPassRequest.declineReason: 'Not Provided'
                                                                                             ) %>
@@ -742,66 +748,57 @@
 
                             </div>
 
-
+                            <% }else{ %>
+                                <h2 class="p-3 bg-dark rounded text-white text-center">You have no pass
+                                    requests...</h2>
+                                <% } %>
                     </div>
+
+
                 </div>
-
-
-
-
         </div>
     </div>
+    <!--  END CONTENT AREA  -->
 
-    <% }else{ %>
-        <h2>You have no pass requests...</h2>
-        <% } %>
-            </div>
+    </div>
+    <!-- END MAIN CONTAINER -->
 
-
-            </div>
-            </div>
-            </div>
-            <!--  END CONTENT AREA  -->
-
-            </div>
-            <!-- END MAIN CONTAINER -->
-
-            <script>
-                $('#modal-blockui').on('click', function () {
-                    var block = $('#modal-reload');
-                    $(block).block({
-                        message: '<svg> ... </svg>',
-                        showOverlay: false,
-                        timeout: 2000, //unblock after 2 seconds
-                        css: {
-                            border: 0,
-                            color: '#000',
-                            padding: 0,
-                            backgroundColor: 'transparent'
-                        }
-                    });
-                });
-
-
-            </script>
-            <script src="/assets/js/ie11fix/fn.fix-padStart.js"></script>
-            <script src="/assets/js/apps/scrumboard.js"></script>
-            <script src="/plugins/dropify/dropify.min.js"></script>
-            <script src="/plugins/blockui/jquery.blockUI.min.js"></script>
-            <script src="/assets/js/users/account-settings.js"></script>
-
-            <script>
-                for (let deleteBtn of document.querySelectorAll('.deleteBtn')) {
-                    deleteBtn.addEventListener('click', function (evt) {
-                        document.querySelector('.deleteConfirm').addEventListener('click', async function (evt) {
-                            console.log(deleteBtn.getAttribute('data-pass-id'))
-                            evt.stopPropagation();
-                            evt.preventDefault();
-                            const res = await fetch('/dormitory/student/pass-request/' + deleteBtn.getAttribute('data-pass-id') + '/delete', {
-                                method: 'post'
-                            });
-                            console.log(await res.json());
-                        })
-                    })
+    <script>
+        $('#modal-blockui').on('click', function () {
+            var block = $('#modal-reload');
+            $(block).block({
+                message: '<svg> ... </svg>',
+                showOverlay: false,
+                timeout: 2000, //unblock after 2 seconds
+                css: {
+                    border: 0,
+                    color: '#000',
+                    padding: 0,
+                    backgroundColor: 'transparent'
                 }
-            </script>
+            });
+        });
+
+
+    </script>
+    <script src="/assets/js/ie11fix/fn.fix-padStart.js"></script>
+    <script src="/assets/js/apps/scrumboard.js"></script>
+    <script src="/plugins/dropify/dropify.min.js"></script>
+    <script src="/plugins/blockui/jquery.blockUI.min.js"></script>
+    <script src="/assets/js/users/account-settings.js"></script>
+
+    <script>
+        for (let deleteBtn of document.querySelectorAll('.deleteBtn')) {
+            deleteBtn.addEventListener('click', function (evt) {
+                document.querySelector('.deleteConfirm').addEventListener('click', async function (evt) {
+                    console.log(deleteBtn.getAttribute('data-pass-id'))
+                    evt.stopPropagation();
+                    evt.preventDefault();
+                    const res = await fetch('/dormitory/student/pass-request/' + deleteBtn.getAttribute('data-pass-id') + '/delete', {
+                        method: 'post'
+                    });
+                    console.log(await res.json());
+                })
+            })
+        }
+    </script>
