--- a/views/surveillance/surveillance.ejs
+++ b/views/surveillance/surveillance.ejs
@@ -1,94 +1,49 @@
 <% layout('layouts/boilerplate') %>
 
+    <link href="/plugins/notification/snackbar/snackbar.min.css" rel="stylesheet" type="text/css">
+
     <!--  BEGIN CONTENT AREA  -->
     <div id="content" class="main-content mt-5 pt-3">
         <div class="container p-1 m-0" style="min-width: 100%;">
             <%- include('../partials/flash/flash.ejs') %>
 
+                <button id="toast-btn" class="btn btn-primary showNotification">show notification</button>
 
-                <div class="modal-dialog m-0 d-flex justify-content-center" role="document"
-                    style="max-width: 100%; max-height:70vh;">
-                    <div class="modal-content card component-card_9 rounded-0" style="">
-                        <div class="d-flex flex-column">
+                <!-- Toast Element -->
 
-                            <div class="col-12 p-0 p-0 m-0" style="">
-                                <div class=" tab-content" id="v-line-pills-tabContent">
-                                    <div style="" class="tab-pane active" id="v-line-pills-profile" role="tabpanel"
-                                        aria-labelledby="v-line-pills-profile-tab">
 
-                                        <div class="media">
-                                            <div class="col-lg-12 col-md-12 col-sm-12 col-12 layout-spacing w-100">
-                                                <div class="widget widget-table-two">
-
-                                                    <div class="widget-heading">
-                                                        <h5 class="p-2 text-danger">Possible Intruders</h5>
-                                                    </div>
-
-                                                    <div class="widget-content" style="height: 60vh; overflow-y: auto;">
-                                                        <div class="table-responsive">
-                                                            <table class="table intruder">
-                                                                <thead>
-                                                                    <tr>
-                                                                        <th>
-                                                                            <div class="th-content d-none">hidden</div>
-                                                                        </th>
-                                                                        <th>
-                                                                            <div class="th-content">Info</div>
-                                                                        </th>
-                                                                        <th>
-                                                                            <div class="th-content">Response</div>
-                                                                        </th>
-                                                                    </tr>
-                                                                </thead>
-                                                                <tbody>
-                                                                    <tr>
-                                                                        <td class="p-1">
-                                                                            <div class="td-content customer-name">
-                                                                                <img src="/assets/img/profile-13.jpg"
-                                                                                    alt="avatar">
-                                                                            </div>
-                                                                        </td>
-                                                                        <td class="p-1 w-50">
-                                                                            <div
-                                                                                class="d-flex flex-column align-item-center justify-content-center">
-                                                                                <div>Unknown</div>
-                                                                                <div>time</div>
-                                                                                <div>Hostel#</div>
-                                                                            </div>
-                                                                        </td>
-                                                                        <td class="p-1">
-                                                                            <div
-                                                                                class="d-flex flex-column align-item-center justify-content-center">
-                                                                                <span class="badge badge-danger mb-1"
-                                                                                    role="button">Ignore</span>
-                                                                            </div>
-                                                                        </td>
-                                                                    </tr>
-                                                                </tbody>
-                                                            </table>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                    </div>
-
-                                </div>
-                            </div>
+                <div style="position: absolute; top: 15px; right: 10px;z-index: 9999;">
+                    <div class="toast toast-primary fade hide" role="alert" data-delay="6000" aria-live="assertive"
+                        aria-atomic="true">
+                        <div class="toast-header">
+                            <strong class="mr-auto">Aftab Returned</strong>
+                            <small class="meta-time">just now</small>
+                            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                                <span aria-hidden="true">×</span>
+                            </button>
+                        </div>
+                        <div class="toast-body">
+                            <a href="#">
+                                <img class="" style="border-radius: 50%;" src="/assets/img/AftabProfile1.jpg" alt=""
+                                    srcset="" width="60" height="60">
+                            </a>
+                            Hostel# 2
+                            Room # 322
                         </div>
                     </div>
+                </div>
+                <div class="modal-dialog m-0 d-flex justify-content-center" role="document"
+                    style="max-width: 100%; max-height:70vh;">
                     <div class="modal-content rounded-0" id="modal-reload" style="width: fit-content;">
                         <div class="modal-body p-1">
                             <div class="cameraWrapper h-100 col-lg-12 col-md-12 col-sm-12 col-12 mt-2 w-100"
                                 id="wrapper">
-                                <!-- <div style="min-width: 720px; min-height:560px;"></div> -->
                                 <video muted id="video" width="720" height="560" autoplay
                                     class="position-relative revert"></video>
                                 <div class="loader1 d-none justify-content-center align-items-center">
-                                    <div class="spinner-border text-info align-self-center loader-lg">Loading...
+                                    <div class="spinner-border text-info align-self-center loader-lg">
                                     </div>
-                                    <div>Loading Faces</div>
+                                    <div>&nbsp;&nbsp;Loading Models</div>
                                 </div>
                             </div>
                         </div>
@@ -102,22 +57,6 @@
         </div>
 
     </div>
-
-    <div class="footer-wrapper">
-        <div class="footer-section f-section-1">
-            <p class="">Copyright © 2021 <a target="_blank" href="https://designreset.com/">DesignReset</a>, All
-                rights reserved.</p>
-        </div>
-        <div class="footer-section f-section-2">
-            <p class="">Coded with <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                    class="feather feather-heart">
-                    <path
-                        d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z">
-                    </path>
-                </svg></p>
-        </div>
-    </div>
     </div>
     <!--  END CONTENT AREA  -->
 
@@ -126,6 +65,18 @@
 
 
     <script src="/face-api/face-api.min.js"></script>
+
+    <!-- notification -->
+    <script>
+        // Get the Toast button
+        var toastButton = document.getElementById("toast-btn");
+        // Get the Toast element
+        var toastElement = document.getElementsByClassName("toast")[0];
+
+        toastButton.onclick = function () {
+            $('.toast').toast('show');
+        }
+    </script>
 
 
     <script>
@@ -162,7 +113,7 @@
             faceapi.nets.faceRecognitionNet.loadFromUri("/"),
             faceapi.nets.faceExpressionNet.loadFromUri("/"),
         ]).then(() => {
-            startVideo();
+            //startVideo();
             //detect faces when camera turns on
             video.addEventListener("play", async () => {
                 const canvas = faceapi.createCanvasFromMedia(video);
@@ -276,3 +227,6 @@
 
 
     </script>
+    <script src="/plugins/notification/snackbar/snackbar.min.js"></script>
+
+    <script src="/assets/js/components/notification/custom-snackbar.js"></script>
